[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'
[tool.isort]
profile = "black"
[tool.darker]
isort = true
[tool.towncrier]
package = "qcodes"
name = "QCoDeS"
directory = "docs/changes/newsfragments"
single_file = true
filename = "docs/changes/{version}.rst"
